Canvas setup with a square

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <html>
 <head>
     <title>A Vector Graphics Editor</title>
+
+    <link rel="stylesheet" href="/assets/css/style.css">
+
     <script src="/assets/js/fabric.min.js"></script>
     <script src="/assets/js/main.js"></script>
 </head>
 <body>
-    <h1>Lets do this</h1>
     <canvas id="main-canvas"></canvas>
 </body>
 </html>
