Add sidebar and tool to make a rectangle

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <script src="/assets/js/main.js"></script>
 </head>
 <body>
-    <canvas id="main-canvas"></canvas>
+    <div id="main-container">
+        <div id="sidebar"></div>
+        <canvas id="main-canvas"></canvas>
+    </div>
 </body>
 </html>
