Add color picker

--- a/index.html
+++ b/index.html
@@ -12,5 +12,9 @@
         <div id="sidebar"></div>
         <canvas id="main-canvas"></canvas>
     </div>
+    <div id="color-picker">
+        <label for="color-textbox">Color code: </label>
+        <input type="text" id="color-textbox">
+    </div>
 </body>
 </html>
