Add properties tool with the ability to set color of an existing element

--- a/index.html
+++ b/index.html
@@ -16,5 +16,7 @@
         <label for="color-textbox">Color code: </label>
         <input type="text" id="color-textbox">
     </div>
+    <div id="properties">
+    </div>
 </body>
 </html>
